feat(basic-3.3): implement concise naming

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ button.btn_delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#tasks_done label {
   text-decoration: line-through;
   color: #888;
 }
